Bug fix deleting align-items repeated

--- a/Web/styleGames.css
+++ b/Web/styleGames.css
@@ -268,7 +268,6 @@ button p{
 
 .result-hour{
     display: flex;
-    align-items: stretch;
     width: 90px;
     height: 45px;
     align-items: center;
